--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".opdrachtDetails.ShowDetailsActivity"
+            android:name=".OpdrachtDetails.ShowDetailsActivity"
             android:label="@string/title_activity_show_details"
             android:parentActivityName=".MainActivity" >
             <meta-data
